# ga_crawler

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.obsidian/: workspace.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1-MILESTONE-AUDIT.md
00-home/: index.md  Текущие приоритеты — 5337 matches достигнуто, локальный режим продолжается.md  Текущие приоритеты — Phase 1 спайк.md  Текущие приоритеты — Phase 10 done + viled pagination unlocked, Phase 11 deploy next.md  Текущие приоритеты — Phase 2 ready для plan.md  Текущие приоритеты — Phase 3 Finding 1 → plan-gaps.md  Текущие приоритеты — Phase 3 closed окончательно, дальше Phase 4.md  Текущие приоритеты — Phase 3 done, дальше Phase 2 или Phase 4.md  Текущие приоритеты — Phase 3 execute.md  Текущие приоритеты — Phase 3 plan 09 shipped, ждём operator UAT.md  Текущие приоритеты — Phase 3 план.md  Текущие приоритеты — Phase 4 plan ready, execute next.md  Текущие приоритеты — Phase 5 done, Phase 6 next.md  Текущие приоритеты — Phase 5 plan ready, execute next.md  Текущие приоритеты — Phase 5 reporter ready для discuss.md  Текущие приоритеты — Phase 6 contexted, plan next.md  Текущие приоритеты — Phase 6 done, Phase 7 next.md  Текущие приоритеты — Phase 7 done, v1 milestone close + operator deploy next.md  Текущие приоритеты — Phase 7 planned, execute next.md  Текущие приоритеты — Phase 8 W0 done, Wave 1-3 next.md  Текущие приоритеты — Phase 8 W1 done, W2 next.md  Текущие приоритеты — Phase 8 planned, execute next.md  Текущие приоритеты — Phase 9 contexted, plan next.md  Текущие приоритеты — Phase 9 planned, execute next.md  Текущие приоритеты — matcher v2.8 + multi-variant shipped, full re-enum next.md  Текущие приоритеты — re-enum verified, 8 slugs unlocked, git push + Monday cron next.md  Текущие приоритеты — sub-bucketing v3 закрыт top-10 honest 4312 matches.md  Текущие приоритеты — v1.0 milestone shipped, operator deploy next.md  Текущие приоритеты — v1.1 milestone открыт, Phase 8 parser fix next.md
atlas/: Архитектура — модульный монолит на pipe-and-filter.md  БД — append-only snapshots с run_id.md  Деплой — Hetzner CX22 + system cron в Asia Almaty.md  Стек — Python 3.12 + curl_cffi + Playwright + SQLite.md
config/: brand-aliases.yaml
data/: ga_brand_slugs.yaml
deploy/: etc-cron-d-ga_crawler  etc-logrotate-d-ga_crawler
docs/: viled-anti-bot-recommendations.html
inbox/: README.md
scripts/: 03-01-synthesize-stale-sku.py  diagnostic_xlsx.py  probe_ga_brands_index_v2.py  probe_viled_335978.py  probe_viled_next_data.py  probe_viled_pdp_variants.py  resolve_unmatched_brands_v2.py  test_brand_enumerator.py  uat3_live_run.py
sessions/: 2026-05-05 — Phase 1 контекст зафиксирован.md  2026-05-05 — инициализация проекта.md  2026-05-06 — Camoufox побеждает GroupIB, Phase 1 re-route.md  2026-05-06 — Phase 1 closure через 01-08 Camoufox + 01-11 MEMO + 01-12 wrap-up.md  2026-05-06 — Phase 3 closed через Wave 6 live-smoke + Wave 7 gap-closure.md  2026-05-06 — Phase 3 контекст зафиксирован.md  2026-05-06 — Phase 3 план создан, 7 plans across 7 waves.md  2026-05-07 — Phase 3 audit-stack закрыт + Phase 2 контекст с scope-narrowing.md  2026-05-11 — Phase 3 UAT Test 6 closed empirically, cold-start race fix validated на live KZ-laptop.md  2026-05-11 — Phase 3 UAT Test 6 re-opened, SMOKE_URLS rotation + cold-start race promoted.md  2026-05-11 — Phase 3 plan 03-09 ships, cold-start race закрыт structurally.md  2026-05-11 — Phase 3 security re-audit + Phase 4 discuss и plan готовы.md  2026-05-11 — Phase 4 executed — matcher + KPI shipped через 5 waves.md  2026-05-11 — Phase 5 discuss + plan ready, 6 plans across 6 waves для execute.md  2026-05-12 — Phase 5 executed — reporter shipped через 6 waves.md  2026-05-12 — Phase 6 contexted — Telegram delivery decisions D-601..D-616.md  2026-05-12 — Phase 6 planned + executed end-to-end, Telegram delivery shipped.md  2026-05-12 — Phase 7 planned end-to-end, 5 plans across 4 waves ready для execute.md  2026-05-13 — Phase 7 executed end-to-end + code review fixes, v1 milestone code-ship complete.md  2026-05-13 — Phase 8 plan ready (5 plans, 4 waves) — wave restructure caught real file-overlap.md  2026-05-13 — live-run 13 vskrыl 3 парсер-бага, v1.1 milestone открыт через gsd-new-milestone.md  2026-05-13 — operator boundaries re-confirmed, deploy остаётся за человеком.md  2026-05-13 — v1.0 milestone audit + archive complete, operator track unblocked.md  2026-05-14 — Phase 8 W0 spike done, microdata премиса invalidated — pivot к h1-spans extraction.md  2026-05-14 — Phase 8 W1 GREEN shipped + cli.py dotenv-leak hotfix closes data egress.md  2026-05-14 — Phase 9 contexted — Live-HTML Harness 7 decisions across 4 areas.md  2026-05-14 — Phase 9 planned end-to-end — 4 plans, 3 waves, plan-checker PASS 8 of 8.md  2026-05-15 — Phase 10 closed + viled pagination unlocked + 4 production bugs fixed.md  2026-05-16 — matcher v2.8 + brand-pages discovery + multi-variant capture.md  2026-05-16 — post-deliver 3-bug fix block — viled-0 stat, palette FP, was_price clarified.md  2026-05-16 — production wiring fix + run-19 re-enum +82pct goldapple +9.86pp recall + 8 brand slugs unlocked.md  2026-05-16 — retry hardening + brand-alias unlock + 5337 matches 105pct rate.md  2026-05-16 — viled multi-variant + matcher sub-bucketing v3 — 4312 matches honest.md
tests/: __init__.py  _fixture_metadata.py  _html_normalize.py  _snapshot_extension.py  conftest.py  test_brand_coverage_canary.py  test_delivery_config.py  test_delivery_source_lock.py  test_delivery_stats.py  test_fixture_metadata.py  test_gate.py  test_html_normalize.py  test_live_fixtures_pii_canary.py  test_message_builder.py  test_phase07_cron_template_shape.py  test_phase07_env_example_shape.py  test_phase07_logrotate_template_shape.py  test_phase07_readme_structure.py  test_phase07_structural_canaries.py  test_phase07_test_failure_alert_shape.py  test_phase07_wrapper_contract.py  test_pytest_addoption.py  test_snapshot_extension.py  test_snapshot_soundness.py  (+1 more)
(+554 files in other folders)
