[project]
name = "ga-crawler"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    # Camoufox Python wrapper 0.4.11 bundles Firefox upstream version 135.0.1-beta.24.
    # Per Phase 3 D-313 (sign-off MEMO 2026-05-06): exact pin is critical because the
    # spike's 99/100 success was validated on this exact Firefox fingerprint hash.
    # Any patch to camoufox bumps the upstream Firefox build and invalidates the spike
    # validation. Manual upgrade workflow: dev runs goldapple smoke probe on new version,
    # PR if pass. Smoke probe asserts camoufox_version_expected == "135.0.1.beta24"
    # (see [tool.ga_crawler.crawl.goldapple] below).
    # Backup if upstream stalls: switch to coryking/camoufox fork (see SKILL maintenance note).
    "aiogram>=3.27,<4.0",
    "camoufox[geoip]==0.4.11",
    "curl-cffi>=0.15,<0.16",
    "pandas>=2.2,<2.3",
    "patchright>=1.55",
    "pydantic>=2.10,<3.0",
    "python-dotenv>=1.0,<2.0",
    "pyyaml>=6.0.3",
    "selectolax>=0.4.7,<0.5",
    "sqlmodel>=0.0.24,<0.1",
    "structlog>=25.0,<26.0",
    "tenacity>=9.0,<10.0",
    "tzdata; sys_platform == 'win32'",
    "xlsxwriter>=3.2,<3.3",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1,<3.2",
    "pytest>=8,<9",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "syrupy>=4.7,<5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ga_crawler"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: marks tests requiring live network (deselect with '-m \"not live\"')",
    "integration: marks integration tests (mocked Camoufox; no live network)",
]

[tool.ga_crawler.crawl.goldapple]
# Phase 3 operational constants. Type-locked; operator edits via git PR.
# Source anchors: 03-CONTEXT.md (D-301..D-313) + spike-skill SKILL.md "Operational constants" + spike notebook.py L41-49.
sanity_gate_m = 1000                          # D-308 final M-gate threshold
pause_range_min_seconds = 3.0                 # D-04 + SKILL — random.uniform(3, 5)
pause_range_max_seconds = 5.0
concurrency = 1                               # D-04 + SKILL
page_timeout_ms = 60000                       # spike notebook.py L43
gate_poll_deadline_ms = 25000                 # spike notebook.py L44 (01-06b proven)
gate_poll_step_ms = 500                       # spike notebook.py L45
gate_shell_max_bytes = 30000                  # spike notebook.py L49
gate_title_marker = "checking"                # spike notebook.py L48 ("Gold Apple — checking device")
camoufox_locales = ["ru-RU", "kk-KZ", "en-US"] # SKILL operational constant
camoufox_geoip = true
camoufox_humanize = true
camoufox_persistent_context = true
m_auto_suggest_factor = 0.7                   # D-310: 0.7 × 4-week-median
m_auto_suggest_after_runs = 4                 # D-310: needs 4+ history rows
camoufox_version_expected = "135.0.1.beta24"  # D-313; smoke probe asserts; PR-update flow

[tool.ga_crawler.crawl.goldapple.smoke_urls]
# D-312 hardcoded probe URLs. RESEARCH §"Code Examples" L908-913. Avoid spike row 0 (stale).
# Operator rotation Phase 7 ops-playbook.
url_1 = "https://goldapple.kz/7680100018-very-irresistible-givenchy"
url_2 = "https://goldapple.kz/7681000001-givenchy-pour-homme-blue-label"
url_3 = "https://goldapple.kz/19000032744-givenchy-gentleman-reserve-privee-eau-de-parfum"

[tool.ga_crawler.crawl.viled]
# Phase 2 operational constants. Type-locked; operator edits via git PR.
# Source anchors: 02-CONTEXT.md (D-201..D-227) + 02-WAVE0-PROBE.md (probe-verified field paths).
sanity_gate_n = 100                           # D-201 seed (revised for catalog/1310 scope; auto-suggest from week 5)
pause_seconds = 2.0                           # D-225 + spike 01-07 (15/15 success at 2s) + WAVE0-PROBE (8/8 success at 2s)
concurrency = 1                               # D-225 (sync curl_cffi loop, no async)
retry_attempts = 3                            # D-225 mirror Phase 3 tenacity policy
n_auto_suggest_factor = 0.7                   # D-203 mirror Phase 3 D-310: 0.7 × 4-week-median
n_auto_suggest_after_runs = 4                 # D-203 mirror Phase 3 D-310: needs 4+ history rows
catalog_urls = [                              # D-227 operator-managed list (additive PRs OK)
    "https://viled.kz/men/catalog/1310",
    "https://viled.kz/women/catalog/1310",
]

[tool.ga_crawler.match]
# Phase 4 operational constants. Type-locked; operator edits via git PR.
# Source anchors: 04-CONTEXT.md (D-406..D-408, D-413).
sanity_gate_p = 20                            # D-406/D-408 seed; auto-suggest from week 5
p_auto_suggest_factor = 0.7                   # D-407 mirror D-203/D-310: 0.7 × 4-week-median
p_auto_suggest_after_runs = 4                 # D-407 mirror D-203/D-310: needs 4+ history rows

[tool.ga_crawler.report]
# Phase 5 operational constants. Type-locked; operator edits via git PR.
# Source anchors: 05-CONTEXT.md (D-509, D-510, D-512, D-515, D-516).
output_dir = "reports"                        # D-510 relative to repo_root
size_limit_mb = 45                            # D-515 REPORT-06 threshold (50 MB Telegram - 5 MB safety)
top_n_deltas = 3                              # D-504 REPORT-04 summary top-N
timezone = "Asia/Almaty"                      # D-512 ISO-week derivation tz

[tool.ga_crawler.deliver]
# Phase 6 operational constants. Type-locked; operator edits via git PR.
# Source anchors: 06-CONTEXT.md (D-603, D-609, D-610, D-614);
# RESEARCH caveat #2 (tenacity uses wait_chain, NOT wait_exponential).
retry_max_attempts = 3                  # D-603 tenacity stop_after_attempt
retry_backoff_min_seconds = 5           # D-603 wait_chain(5, 15, 45) — first wait
retry_backoff_max_seconds = 45          # D-603 wait_chain(5, 15, 45) — last wait
ops_message_truncate_chars = 3500       # D-610 traceback truncation (safe under 4096 TG limit)
business_caption_max_chars = 1024       # Telegram document caption hard-limit
parse_mode = "HTML"                     # D-609 — escape only <>&
